# gpvdm

./: 2newton.c  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  a-silicon.gpvdm  aclocal.m4  advmath.c  advmath.h  anal.c  ar.m4  arch_configure.sh  buffer.c  buffer.h  build  buildplugins.sh  cal_path.c  cal_path.h  centos_configure.sh  checksum.c  checksum.h  cigs.gpvdm  clean_all.sh  code_ctrl.h  complex_solver.c  complex_solver.h  config.c  config.h  config.status  config_files.m4  configure  configure.ac  const.h  device.h  dll_export.h  dll_interface.c  dll_interface.h  dos.c  (+119 more)
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cluster/: Makefile.am  cal_path.c  clean.c  command.c  crypto.inp  debug.c  get_data.c  head.c  inp.c  inp.h  inp_struct.h  ip.c  jobs.c  jobs_save_load.c  kill_pid.c  killall.c  load.c  log.c  main.c  makefile  message.c  node.c  node.inp  node_list.inp  nodes.c  packet.c  poweroff.c  quit.c  register.c  run_jobs.c  rx_file.c  rx_loop.c  sleep.c  state.c  state.h  sync.c  tx_file.c  tx_packet.h  util.c  util.h
cluster_/: Makefile.am
css/: Makefile  Makefile.in  style.css  style_h.css
debian/: changelog  control  copyright  files  gpvdm.lintian  gpvdm.manpages  rules
desktop/: Makefile.am  gpvdm-gpvdm.xml  gpvdm.desktop  gpvdm.rc
device_lib/: a-silicon.gpvdm  bilayer.gpvdm  carsten.gpvdm  cigs.gpvdm  default.gpvdm  elizabeth.gpvdm  helmut-case1.gpvdm  helmut-case4.gpvdm  helmut-case5.gpvdm  ofet.gpvdm  oled.gpvdm  p3htpcbm.gpvdm  perovskite.gpvdm  silicon.gpvdm  tandem.gpvdm  tim-bilayer.gpvdm  will.gpvdm
docs/: Makefile.am  doxygen_core.config  doxygen_gui.config  gpvdm.tex
flags/: Makefile.am
gui/: QColorPicker.py  QComboBoxLang.py  QHTabBar.py  QParasitic.py  QWidgetSavePos.py  about.py  band_graph.py  bugs.py  build.bat  cal_path.py  check_sim_exists.py  circuit.py  clean_sim.py  clone.py  cluster.py  cluster_config_ribbon.py  cluster_config_window.py  cmp_class.py  code_ctrl.py  colors.py  command_args.py  config.py  config_window.py  connect_to_cluster.py  cost.py  (+234 more)
images/: Makefile  Makefile.am  Makefile.in  gpvdm.rc  makefile
images/16x16/: Makefile  Makefile.am  Makefile.in
images/32x32/: Makefile  Makefile.in
images/48x32/: Makefile  Makefile.am  Makefile.in
images/64x64/: Makefile  Makefile.am  Makefile.in
images/flags/: Makefile.am
images/icons/128x128/: Makefile.am
images/icons/256x256/: Makefile.am
images/icons/32x32/: Makefile.am
images/icons/48x48/: Makefile.am
images/icons/512x512/: Makefile.am
images/scalable/: Makefile.am
lang/: Makefile  Makefile.am  Makefile.in  de.po  de_DE.po  fa_IR.po  fa_IR.ref  gpvdm.pot  ru_RU.po  zh_CN.po
lang/de_DE/LC_MESSAGES/: gpvdm.mo  ref.ref
lang/fa_IR/LC_MESSAGES/: gpvdm.mo
lang/lang/: Makefile.am  gpvdm.pot
lang/ru_RU/LC_MESSAGES/: gpvdm.mo  ref.ref
lang/zh_CN/LC_MESSAGES/: gpvdm.mo  ref.ref
lib/: Makefile  Makefile.am  Makefile.in  advmath.c  buffer.c  cal_path.c  complex_solver.c  contacts.c  device.c  epitaxy.c  epitaxy_materials.c  exit.c  gui_hooks.c  hard_limit.c  i.c  inp.c  list.c  log.c  makefile  memory_basic.c  newton_externalv.c  newton_interface.c  newton_update.c  newton_voc.c  ntricks.c  ntricks_externalv.c  patch.c  plot.c  rand.c  remesh.c  solver_interface.c  startstop.c  thermal.c  timer.c  util.c  util_str.c  vec.c
libdos/: Makefile  Makefile.am  Makefile.in  checksum.c  dos.c  dos_an.c  gendosfdgaus.c  hash.c  makefile
libdump/: Makefile  Makefile.am  Makefile.in  buffer.c  cache.c  dump.c  dump_1d_slice.c  dump_config.c  dump_contacts.c  dump_ctrl.c  dump_dynamic.c  dump_energy_slice.c  dump_file.c  dump_map.c  dump_snapshot_utils.c  makefile
libfdtd/: Makefile.am  broke.c  bust.c  code.cl  fdtd.c  fdtd_config.c  fdtd_dump.c  fdtd_init.c  fdtd_kernel.c  fdtd_lambda.c  fdtd_mem.c  fdtd_mesh.c  fdtd_opencl_kernel.c  fdtd_opencl_util.c  fdtd_power.c  fdtd_solve.c  fdtd_util.c  main.c  main_non_mpi.c  makefile  near_to_far.c  opencl_init.c  opencl_mem.c  solver.c  vec.c  vec.h  waypoin1.c  waypoin2.c  working.c  working1.c  working2.c  working3.c
libi/: Makefile  Makefile.am  Makefile.in  i.c
liblight/: Makefile  Makefile.am  Makefile.in  light_config.c  light_dump.c  light_dump_verbose_1d.c  light_dump_verbose_2d.c  light_interface.c  light_laser.c  light_materials.c  light_memory.c  light_mesh.c  light_utils.c  makefile  ray.c
libmeasure/: Makefile  Makefile.am  Makefile.in  exp.c  makefile  measure.c  pl.c  probe.c
libmemory/: Makefile  Makefile.am  Makefile.in  memory.c  memory_basic.c
libmesh/: Makefile  Makefile.am  Makefile.in  makefile  time.c
man/: Makefile  Makefile.am  Makefile.in
plugins/equilibrium/: Makefile  Makefile.am  Makefile.in  equilibrium.c  equilibrium.h  plugin.c
plugins/full/: Makefile  Makefile.am  Makefile.in  interface.c  light.c
plugins/fxdomain/: Makefile  Makefile.am  Makefile.in  fit_sin.c  fx.c  fxdomain.c  fxdomain.h  fxdomain_voc_ntricks.c  plugin.c
plugins/jv/: Makefile  Makefile.am  Makefile.in  jv.c  jv.h  jv_ntricks.c  makefile  plugin.c
plugins/light_flat/: Makefile  Makefile.am  Makefile.in  interface.c  light.c  test.c
plugins/newton/: Makefile  Makefile.am  Makefile.in  makefile  newton.c  newton.h  plugin.c
plugins/newton_norm/: Makefile  Makefile.am  Makefile.in  newton.c  newton.h  plugin.c
plugins/photon_extraction/: Makefile  Makefile.am  Makefile.in  photon_extraction_plugin.c  photon_extraction_plugin.h  plugin.c
plugins/pulse/: Makefile  Makefile.am  Makefile.in  makefile  plugin.c  pulse.c  pulse.h  pulse_voc_ntricks.c
plugins/sun_voc/: Makefile.am  plugin.c  sun_voc.c  sun_voc.h
plugins/umfpack/: Makefile  Makefile.am  Makefile.in  lib.c  lib.h  solver.c
src/: Makefile  Makefile.am  Makefile.in  anal.c  complex_solver.c  config.c  dll_interface.c  frame.c  gpvdm.rc  inital.c  initial.c  main.c  memory.c  memory_basic.c  mesh.c  newton_interface.c  newton_update.c  ntricks.c  ntricks_externalv.c  pos.c  remesh.c  run_electrical_dll.c  sim.c  sim_find_n0.c  sim_run.c  solver_interface.c  thermal.c  thermal_old.c
(+7250 files in other folders)
